--- a/Tango/packages.config
+++ b/Tango/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoUpdateProjectsMinimumRequiredClickOnceVersion" version="1.0.7" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1003" targetFramework="net461" />
 </packages>
